<resources>
    <string name="app_name">Calculator OSAGO/repo-14</string>
    <string name="title">Калькулятор ОСАГО</string>
    <string name="city">Город регистрации собственника</string>
    <string name="drivers">Сколько водителей</string>
    <string name="driversTitle">Количество водителей</string>
    <string name="youngestDriver">Возраст младшего из водителей</string>
    <string name="minExperience">Минимальный стаж водителей</string>
    <string name="yearsNoAccident">Сколько лет не было аварий</string>
    <string name="carHp">Мощность автомобиля</string>
    <string name="button_string">Рассчитать ОСАГО</string>
    <string name="coefficient_text">Ваши коэффициенты</string>
    <string name="base">БТ</string>
    <string name="base_text">Устанавливает страховая\nкомпания</string>
    <string name="base_title">(базовый тариф)</string>
    <string name="r">₽</string>
    <string name="x">×</string>
    <string name="power">КМ</string>
    <string name="power_text">Чем мощнее автомобиль,\nтем дороже страховой полис</string>
    <string name="power_title">(коэфф. мощности)</string>
    <string name="local">КТ</string>
    <string name="local_text">Определяется по прописк\nсобственника автомобиля</string>
    <string name="local_title">(территориальный коэфф.)</string>
    <string name="demage">КБМ</string>
    <string name="demage_text">Учитывается только самы\nвысокий коэффициент из всех\nводителей</string>
    <string name="demage_title">(коэфф. безаварийности)</string>
    <string name="age">КВС</string>
    <string name="age_text">Чем больше возраст и стаж\nу вписанного в полис водителя,\nтем дешевле будет полис</string>
    <string name="age_title">(коэфф. возраст/стаж)</string>
    <string name="limit">КО</string>
    <string name="limit_text">Полис с ограниченным списком\nводителей будет стоить дешевле</string>
    <string name="limit_title">(коэфф. ограничений)</string>
    <string name="add_city">Введите город</string>
    <string name="add_power">Введите мощность автомобиля </string>
    <string name="add_drivers">Введите количество водителей</string>
    <string name="add_youngest_driver">Введите возраст младшего из водителей</string>
    <string name="add_min_experience">Введите минимальный стаж водителей</string>
    <string name="add_years_no_accidents">Введите количество лет без аварий</string>
    <string name="button_text">Далее</string>
    <string name="button_final_text">Подтвердить</string>
    <string name="offers_button">Рассчитать точную цену и купить</string>
    <string name="offers_title">Расчёт цены полиса</string>

</resources>