<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:contentPaddingBottom="10dp"
    android:id="@+id/card_layout">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/avatar" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/coefficient_text" />

    <TextView
        android:id="@+id/coefficients"
        android:layout_width="250dp"
        android:layout_height="22dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:text=""/>

    <ImageView
        android:id="@+id/drop_image"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:layout_gravity="end"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/drop" />

    <RelativeLayout
        android:id="@+id/expanded_view"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="80dp"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:text="@string/base"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="30dp"
            android:text="@string/base_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/base_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/r"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="85dp"
            android:text="@string/power"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="115dp"
            android:text="@string/power_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="90dp"
            android:text="@string/power_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/power_coefficient"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="14dp"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="170dp"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="200dp"
            android:text="@string/local_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="205dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="175dp"
            android:text="@string/local_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/local_coefficient"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="185dp"
            android:layout_marginEnd="14dp"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="255dp"
            android:text="@string/demage"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="285dp"
            android:text="@string/demage_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="195dp"
            android:layout_height="20dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="260dp"
            android:text="@string/demage_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/demage_coefficient"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="14dp"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="43dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="360dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="390dp"
            android:text="@string/age_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="20dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="365dp"
            android:text="@string/age_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/age_coefficient"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="380dp"
            android:gravity="end"
            android:layout_marginEnd="14dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="465dp"
            android:text="@string/limit"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="495dp"
            android:text="@string/limit_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="470dp"
            android:text="@string/limit_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/limit_coefficient"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="480dp"
            android:gravity="end"
            android:layout_marginEnd="14dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>